# Projecto-Prodigi

./: .dockerignore  README.md  anonimizacao.py  auth.py  crud.py  database.py  dockerfile  hospital_db_dump.sql  main.py  models.py  podman-compose.yml  pyproject.toml  schemas.py  seed.py
ia/: __init__.py  features.py  modelo.pkl  modelo.py  previsao.py
templates/: admin_dashboard.html  base.html  dashboard.html  enfermeiro_dashboard.html  exportar.html  ia.html  login.html  medico_dashboard.html  rececionista_dashboard.html  utente_estado.html
tests/: test_api.py
