[project]
name = "project-final"
version = "0.1.0"
description = "SIAGUH - Sistema Integrado de Apoio à Gestão de Urgências Hospitalares"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<5.0.0",
    "scikit-learn>=1.3.0",      # <--- NOVO
    "pandas>=2.0.0",             # <--- NOVO
    "joblib>=1.3.0",             # <--- NOVO
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]






